# barlownumeralsystems

./: .zenodo.json  CONTRIBUTORS.md  README.md  cldfbench_barlownumeralsystems.py  metadata.json  pyproject.toml  setup.py
.github/workflows/: python-package.yml
cldf/: README.md  cldf-metadata.json  codes.csv  languages.csv  parameters.csv  requirements.txt  sources.bib  values.csv
etc/: codes.csv  parameters.csv
raw/: barlow-austronesian-papuan-numeral-systems.csv  intro.md  sources.bib
